recuperar senha e login funfando

--- a/site/html/login.html
+++ b/site/html/login.html
@@ -4,18 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Login - Puro Sangue</title>
-  <link rel="stylesheet" href="../site/html/styles.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body style="background-color: #333333;">
   <div class="login-container">
     <h1>Bem-vindo de volta!</h1>
-    <form id="loginForm" method="POST">
+    <form id="loginForm" action="../../php/login.php" method="POST">
       <input name="email" type="email" id="email" placeholder="Email" required />
       <input name="senha" type="password" id="password" placeholder="Senha" required />
       <button type="submit">Entrar</button>
     </form>
     <div class="footer">
-      <p>Não tem uma conta? <a href="cadastro.php">Cadastre-se</a></p>
+      <p>Não tem uma conta? <a href="../../php/cadastro.html">Cadastre-se</a></p>
       <p><a href="recuperar-senha.html">Esqueceu sua senha?</a></p>
     </div>
   </div>
