--- a/site/html/login.html
+++ b/site/html/login.html
@@ -15,7 +15,7 @@
       <button type="submit">Entrar</button>
     </form>
     <div class="footer">
-      <p>Não tem uma conta? <a href="../../php/cadastro.html">Cadastre-se</a></p>
+      <p>Não tem uma conta? <a href="../html/cadastro.html">Cadastre-se</a></p>
       <p><a href="recuperar-senha.html">Esqueceu sua senha?</a></p>
     </div>
   </div>
