--- a/site/html/cadastro.html
+++ b/site/html/cadastro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Cadastro - Puro Sangue</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../css/styles.css" />
 </head>
 
 <body style="background-color: #333333;">
