--- a/php/agtemele.html
+++ b/php/agtemele.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="../site/html/index.html"></a>
+    <a href="../site/html/login.html"></a>
 </body>
 </html>
