--- a/site/html/Colecao.html
+++ b/site/html/Colecao.html
@@ -14,13 +14,11 @@
       <h1 class="logo">
         <img src="../imagens/logo.png" alt="Puro Sangue" width="50px">Puro Sangue
       </h1>
+      <button class="hamburger">&#9776;</button>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="colecao.html" class="active">Coleções</a></li>
-          <li><a href="#">Masculino</a></li>
-          <li><a href="#">Feminino</a></li>
-          <li><a href="#">Contato</a></li>
+          <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
     </header>
