--- a/site/html/contato.html
+++ b/site/html/contato.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="contato.html" class="active">Contato</a></li>
+          <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -34,7 +34,7 @@
           <input type="email" id="email" name="email" required>
 
           <label for="mensagem">Mensagem</label>
-          <textarea id="mensagem" name="mensagem" rows="6" required></textarea>
+          <textarea id="mensagem" name="mensagem" required></textarea>
 
           <button type="submit" class="btn">Enviar</button>
         </form>
