--- a/site/html/index.html
+++ b/site/html/index.html
@@ -22,12 +22,14 @@
           <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
-      <button id="cart-button" class="cart-button">
-  🛒 <span id="cart-count">0</span>
-</button>
-<button id="profile-button" class="profile-button" title="Perfil">
-  👤
-</button>
+    <div class="user-buttons">
+  <button id="cart-button" class="cart-button" title="Carrinho">
+    🛒 <span id="cart-count">0</span>
+  </button>
+  <button id="profile-button" class="profile-button" title="Perfil">
+    👤
+  </button>
+</div>
 
 <!-- Modal de login e perfil -->
 <div id="profile-modal" class="modal hidden">
