--- a/site/html/index.html
+++ b/site/html/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="../css/styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <div class="container">
     <header>
@@ -16,43 +17,20 @@
       </h1>
       <button class="hamburger">&#9776;</button>
       <nav>
-        
+
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
-    <div class="user-buttons">
-  <button id="cart-button" class="cart-button" title="Carrinho">
-    🛒 <span id="cart-count">0</span>
-  </button>
-  <button id="profile-button" class="profile-button" title="Perfil">
-    👤
-  </button>
-</div>
-
-<!-- Modal de login e perfil -->
-<div id="profile-modal" class="modal hidden">
-  <div class="modal-content">
-    <span id="close-profile-modal" class="close">&times;</span>
-
-    <!-- Tela Login -->
-    <div id="login-screen">
-      <h2>Entrar</h2>
-      <input type="text" id="username" placeholder="Usuário" />
-      <input type="password" id="password" placeholder="Senha" />
-      <button id="login-submit">Login</button>
-    </div>
-
-    <!-- Tela Perfil -->
-    <div id="profile-screen" class="hidden">
-      <h2>Olá, <span id="display-username"></span>!</h2>
-      <button id="logout-btn">Sair</button>
-    </div>
-  </div>
-</div>
-
-
+      <div class="user-buttons">
+        <button id="cart-button" class="cart-button" title="Carrinho">
+          🛒 <span id="cart-count">0</span>
+        </button>
+        <button id="profile-button" class="profile-button" title="Perfil">
+          👤
+        </button>
+      </div>
     </header>
 
 
@@ -65,7 +43,7 @@
           <a href="Colecao.html" class="btn">Ver coleção</a>
         </div>
         <div class="carrousel-slide active">
-         <img src="../imagens/camisetaParceria2.png" alt="Coleção Inverno Slide 1" class="carrousel-img">
+          <img src="../imagens/camisetaParceria2.png" alt="Coleção Inverno Slide 1" class="carrousel-img">
         </div>
         <div class="carrousel-slide">
           <img src="../imagens/calcacargoPraceria2.png" alt="Coleção Inverno Slide 2" class="carrousel-img">
@@ -97,7 +75,8 @@
               <h4>Camiseta Logo STRW</h4>
               <p>R$ 169,99</p>
               <a href="camiseta PS.html" class="btn-product">Detalhes</a>
-              <button class="btn-add-cart" data-nome="Camiseta Logo STRW" data-preco="169.99">Adicionar ao carrinho</button>
+              <button class="btn-add-cart" data-nome="Camiseta Logo STRW" data-preco="169.99">Adicionar ao
+                carrinho</button>
             </div>
           </div>
           <div class="produto-container">
@@ -109,19 +88,21 @@
               <h4>Moletom Oversized</h4>
               <p>R$ 289,90</p>
               <a href="moletomPS.html" class="btn-product">Detalhes</a>
-              <button class="btn-add-cart" data-nome="Moletom Oversized" data-preco="289.90">Adicionar ao carrinho</button>
+              <button class="btn-add-cart" data-nome="Moletom Oversized" data-preco="289.90">Adicionar ao
+                carrinho</button>
             </div>
           </div>
           <div class="produto-container">
             <div class="produto">
-               <div class="camisa-hover">
+              <div class="camisa-hover">
                 <img src="../imagens/calcacargo.jpg" alt="Moletom Oversized" class="frente">
                 <img src="../imagens/calcacargocosatas.jpg" alt="Moletom Oversized" class="costas">
               </div>
               <h4>Calça Cargo Preta</h4>
               <p>R$ 219,90</p>
               <a href="calcacargoPS.html" class="btn-product">Detalhes</a>
-              <button class="btn-add-cart" data-nome="Calça Cargo Preta" data-preco="219.90">Adicionar ao carrinho</button>
+              <button class="btn-add-cart" data-nome="Calça Cargo Preta" data-preco="219.90">Adicionar ao
+                carrinho</button>
             </div>
           </div>
           <div class="produto-container">
@@ -151,19 +132,22 @@
               <h4>Camiseta da Ferrari</h4>
               <p>R$ 389,90</p>
               <a href="camisetaParceria.html" class="btn-product">Detalhes</a>
-              <button class="btn-add-cart" data-nome="Camiseta Logo STRW" data-preco="169.99">Adicionar ao carrinho</button>
+              <button class="btn-add-cart" data-nome="Camiseta Logo STRW" data-preco="169.99">Adicionar ao
+                carrinho</button>
             </div>
           </div>
           <div class="produto-container">
             <div class="produto">
               <div class="camisa-hover">
                 <img src="../imagens/MoletomOversizedParceria.jpg" alt="Moletom Oversized" class="frente" width="200">
-                <img src="../imagens/MoletomOversizedcostasParceria.jpg" alt="Moletom Oversized Costas" class="costas" width="200">
+                <img src="../imagens/MoletomOversizedcostasParceria.jpg" alt="Moletom Oversized Costas" class="costas"
+                  width="200">
               </div>
               <h4>Moletom Oversized Ferrari</h4>
               <p>R$ 567,99</p>
               <a href="moletomParceria.html" class="btn-product">Detalhes</a>
-              <button class="btn-add-cart" data-nome="Moletom Oversized Ferrari" data-preco="567.99">Adicionar ao carrinho</button>
+              <button class="btn-add-cart" data-nome="Moletom Oversized Ferrari" data-preco="567.99">Adicionar ao
+                carrinho</button>
             </div>
           </div>
           <div class="produto-container">
@@ -175,7 +159,8 @@
               <h4>Calça Cargo Preta Ferrari</h4>
               <p>R$ 299,99</p>
               <a href="calcacargoParceria.html" class="btn-product">Detalhes</a>
-              <button class="btn-add-cart" data-nome="Calça Cargo Preta Ferrari" data-preco="299.99">Adicionar ao carrinho</button>
+              <button class="btn-add-cart" data-nome="Calça Cargo Preta Ferrari" data-preco="299.99">Adicionar ao
+                carrinho</button>
             </div>
           </div>
           <div class="produto-container">
@@ -187,24 +172,25 @@
               <h4>Jaqueta Street Ferrari</h4>
               <p>R$ 458,90</p>
               <a href="jaquetaStreetParceria.html" class="btn-product">Detalhes</a>
-              <button class="btn-add-cart" data-nome="Jaqueta Street Ferrari" data-preco="458.90">Adicionar ao carrinho</button>
+              <button class="btn-add-cart" data-nome="Jaqueta Street Ferrari" data-preco="458.90">Adicionar ao
+                carrinho</button>
             </div>
           </div>
         </div>
       </section>
     </main>
     <div id="cart-modal" class="cart-modal hidden">
-  <div class="cart-content">
-    <h3>Carrinho</h3>
-    <ul id="cart-items"></ul>
-    <div class="cart-total">
-      Total: R$ <span id="cart-total">0.00</span>
+      <div class="cart-content">
+        <h3>Carrinho</h3>
+        <ul id="cart-items"></ul>
+        <div class="cart-total">
+          Total: R$ <span id="cart-total">0.00</span>
+        </div>
+        <button id="close-cart" class="btn">Fechar</button>
+      </div>
     </div>
-    <button id="close-cart" class="btn">Fechar</button>
-  </div>
-</div>
 
-    
+
 
     <footer>
       <div class="footer-grid">
@@ -241,4 +227,5 @@
   </div>
   <script src="../main.js"></script>
 </body>
+
 </html>
