--- a/site/html/login.html
+++ b/site/html/login.html
@@ -1,23 +1,97 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Login - Puro Sangue</title>
   <link rel="stylesheet" href="../css/styles.css" />
+  <style>
+    /* Estilos da tela de login */
+    body {
+      background-color: #000;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    .login-container {
+      background-color: #000;
+      padding: 40px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(255, 0, 0, 0.3);
+      width: 100%;
+      max-width: 400px;
+      text-align: center;
+    }
+
+    .login-container h1 {
+      margin-bottom: 30px;
+      font-size: 28px;
+      color: #fff;
+    }
+
+    .login-container input {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 5px;
+      background-color: #555;
+      color: #fff;
+      font-size: 16px;
+    }
+
+    .login-container button {
+      width: 100%;
+      padding: 12px;
+      background-color: #490202;
+      border: none;
+      border-radius: 5px;
+      color: white;
+      font-size: 16px;
+      cursor: pointer;
+      margin-top: 20px;
+      transition: background-color 0.3s;
+    }
+
+    .login-container button:hover {
+      background-color: #fa0000;
+    }
+
+    .footer {
+      margin-top: 20px;
+      font-size: 14px;
+    }
+
+    .footer a {
+      color: #ff0015;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
-<body style="background-color: #333333;">
+
+<body>
   <div class="login-container">
     <h1>Bem-vindo de volta!</h1>
     <form id="loginForm" action="../../php/login.php" method="POST">
-      <input name="email" type="email" id="email" placeholder="Email" required />
-      <input name="senha" type="password" id="password" placeholder="Senha" required />
+      <input name="email" type="email" placeholder="Email" required />
+      <input name="senha" type="password" placeholder="Senha" required />
       <button type="submit">Entrar</button>
     </form>
     <div class="footer">
-      <p>Não tem uma conta? <a href="../../php/cadastro.html">Cadastre-se</a></p>
+      <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se</a></p>
       <p><a href="recuperar-senha.html">Esqueceu sua senha?</a></p>
     </div>
   </div>
 </body>
+
 </html>
