--- a/site/html/index.html
+++ b/site/html/index.html
@@ -31,6 +31,25 @@
           👤
         </button>
       </div>
+
+      <!-- Modal de login e perfil -->
+      <div id="profile-modal" class="modal hidden">
+        <div class="modal-content">
+          <span id="close-profile-modal" class="close">&times;</span>
+
+          <!-- Tela Login -->
+          <div id="login-screen">
+            <h2>Entrar</h2>
+            <input type="text" id="username" placeholder="Usuário" />
+            <input type="password" id="password" placeholder="Senha" />
+            <button id="login-submit">Login</button>
+            <button id="cadastro-btn">Cadastrar</button>
+
+          </div>
+        </div>
+      </div>
+
+
     </header>
 
 
@@ -38,7 +57,7 @@
     <main style="width:100vw;max-width:100vw;overflow-x:hidden;">
       <section class="hero carrousel">
         <div class="hero-content">
-          <h2>Drop de Inverno 2025</h2>
+          <h2>Drip do Momento em 2025</h2>
           <p>Estilo nas ruas com 20% OFF em peças selecionadas</p><br>
           <a href="Colecao.html" class="btn">Ver coleção</a>
         </div>
