--- a/site/html/contato.html
+++ b/site/html/contato.html
@@ -15,11 +15,37 @@
       </h1>
       <button class="hamburger">&#9776;</button>
       <nav>
+
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
       </nav>
+      <div class="user-buttons">
+        <button id="cart-button" class="cart-button" title="Carrinho">
+          🛒 <span id="cart-count">0</span>
+        </button>
+        <button id="profile-button" class="profile-button" title="Perfil">
+          👤
+        </button>
+      </div>
+
+      <!-- Modal de login e perfil -->
+      <div id="profile-modal" class="modal hidden">
+        <div class="modal-content">
+          <span id="close-profile-modal" class="close">&times;</span>
+
+          <!-- Tela Login -->
+          <div id="login-screen">
+            <h2>Entrar</h2>
+            <input type="text" id="username" placeholder="Usuário" />
+            <input type="password" id="password" placeholder="Senha" />
+            <button id="login-submit">Login</button>
+            <button id="cadastro-btn">Cadastrar</button>
+
+          </div>
+        </div>
+      </div>
     </header>
 
     <main class="contato-main">
